--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="inputsCadastro">
-                    <input type="text" id="iptDtNasc" placeholder="Data de Nascimento (DD/MM/AAAA)">
+                    <input type="text" id="iptDtNasc" placeholder="Data de Nascimento (AAAA-MM-DD)">
                     <select name="PF" id="selectPF">
                         <option value="#">Personagem Favorito</option>
                         <option value="1">Kim Dokja</option>
