--- a/public/dashboard/contaHome.html
+++ b/public/dashboard/contaHome.html
@@ -51,6 +51,12 @@
         </div>
     </div>
 
+    <div class="introHome">
+        <div>
+            <h2>Feed de Post</h2>
+        </div>
+    </div>
+
 
     <div class="postsContainer">
         <div id="feed_container" class="feed-container">
@@ -99,6 +105,10 @@ function exibirPosts(posts) {
             <h3>${post.titulo}</h3>
             <p>${post.descricao}</p>
             <span>Postado por: ${post.nome}</span>
+            <br>
+            <div>
+                <button>comentar</button> <input style="width: 465px;">
+            </div>
         </div>
         `;
 
