--- a/public/sobreORV.html
+++ b/public/sobreORV.html
@@ -102,9 +102,7 @@
             <div class="imageBoxes">
                 <div class="imageBox">
                     <div class="imageContent"> 
-                        <div class=""> 
                             <img src="./imagens/IMG-persos/KDJ.jpg" alt="" style="height: 400px;">
-                        </div>
                     </div>
                 </div>
                 <div class="imageBox">
@@ -154,3 +152,107 @@
             </div>
         </div>
     </div>
+
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <div class="infoBox1">
+        <div class="infoTextBox">
+            <h2>Kim Dokja</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+            </p>
+        </div>
+        <div class="infoImg">
+        </div>
+    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <div class="infoBox2">
+        <div class="infoTextBox">
+            <h2>Yoo Joonghyuk</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+            </p>
+        </div>
+        <div class="infoImg2"> 
+        </div>
+    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <div class="infoBox1">
+        <div class="infoTextBox">
+            <h2>Han Sooyoung</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+            </p>
+        </div>
+        <div class="infoImg3">
+        </div>
+    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <div class="infoBox2">
+        <div class="infoTextBox">
+            <h2>Lee Hyunsung</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+            </p>
+        </div>
+        <div class="infoImg4">
+        </div>
+    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <div class="infoBox1">
+        <div class="infoTextBox">
+            <h2>Jung Heewon</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+            </p>
+        </div>
+        <div class="infoImg5">
+        </div>
+    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <div class="infoBox2">
+        <div class="infoTextBox">
+            <h2>Yoo Sangah</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+            </p>
+        </div>
+        <div class="infoImg6">
+        </div>
+    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <div class="infoBox1">
+        <div class="infoTextBox">
+            <h2>Lee Jihye</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+            </p>
+        </div>
+        <div class="infoImg7">
+        </div>
+    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <div class="infoBox2">
+        <div class="infoTextBox">
+            <h2>Lee Gilyoung</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+            </p>
+        </div>
+        <div class="infoImg8">
+        </div>
+    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+    <div class="infoBox1">
+        <div class="infoTextBox">
+            <h2>Shin Yooshung</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, quis veritatis id ut vel, saepe recusandae quo cumque qui blanditiis eum iusto nihil delectus magnam. Hic consequuntur laudantium totam.
+            </p>
+        </div>
+        <div class="infoImg9"> 
+        </div>
+    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------ -->
+
+</body>
+</html>
